tests/pass/Implements.java
package pass;

public class Implements {
  public boolean testImplements() {
    return true;
  }
}
