tests/fail/Switch.java
package fail;

import java.lang.System;

public class Switch {

  public static void main(String[] args ) {
    boolean switch = true;
  }

}
